@@ -9,11 +9,10 @@
 {view_head}
 <style>.crumb_wrap{display:none;}.description_wrap{background:transparent;}img{-webkit-filter:brightness(100%);filter:brightness(100%);}#background_image{url('/art/mexico_background_image.jpg')};{css}</style>
 {beige}
-{main_head}
+{main_head_search}
 {view_search_test}
 {explore_portals}
 {compare_buttons}
-{intro_generator}
 {where_is_the_data_from}
 {view_tail}
 			
@@ -162,3 +161,4 @@
 		<span class="screen_generator"></span>
 	</span>
 </a>
+
