@@ -1,3 +1,12 @@
+Development Portal (2016-11-28 shi)
+==============================
+Updated BETA badge style
+Updated search button style
+Added welcome text section for new DISCOVER
+Updated welcome text section styles
+Removed Generator link
+
+
 Development Portal (2016-11-22 shi)
 ==============================
 Added div for better alignment of iati-identifier in SAVi
